@@ -1,5 +1,10 @@
 2007-12-18  Sven Neumann  <sven@gimp.org>
 
+	* app/base/tile-pyramid.c: use the coordinate parameters in
+	tile_data_pointer() instead of adjusting the pointer manually.
+
+2007-12-18  Sven Neumann  <sven@gimp.org>
+
 	* app/base/tile-pyramid.c
 	* app/paint-funcs/paint-funcs.c: sprinkled with const qualifiers.
 
